home page heading z-index fix

--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -478,6 +478,7 @@ body {
 
             .head-section-content-inner {
                 top: 40% !important;
+                z-index: 100 !important;
             }
         }
 
